Fix a ton of broken links with reorganization

--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -77,11 +77,11 @@ Contract routers can safely connect to the same subgraph instances as any other 
 
 #### Contract documentation
 
-In Studio, each contract variant has its own README, schema reference, and Explorer. If you [make a contract variant public](./studio-graph-features/#public-variants), you can provide these resources to external client developers to help them interact with a specific portion of your graph (while omitting irrelevant types and fields).
+In Studio, each contract variant has its own README, schema reference, and Explorer. If you [make a contract variant public](../graphs/studio-features/#public-variants), you can provide these resources to external client developers to help them interact with a specific portion of your graph (while omitting irrelevant types and fields).
 
 ## Setup
 
-> ⚠️ The Apollo Studio steps below require an organization member with the **Org Admin** or **Graph Admin** role. [Learn about member roles.](./org/members/)
+> ⚠️ The Apollo Studio steps below require an organization member with the **Org Admin** or **Graph Admin** role. [Learn about member roles.](../org/members/)
 
 ### 1. Update your router and subgraphs
 
@@ -200,7 +200,7 @@ Open your source variant's Settings page and select the **This Variant** tab. Th
 <img
   class="screenshot"
   alt="Contract settings in Studio"
-  src="./img/contract-create.jpg"
+  src="../img/contract-create.jpg"
   width="550"
 />
 
@@ -209,7 +209,7 @@ Click **Create Contract** to open the following dialog:
 <img
   class="screenshot"
   alt="Create contract dialog"
-  src="./img/contracts-dialog.jpg"
+  src="../img/contracts-dialog.jpg"
   width="550"
 />
 
@@ -231,7 +231,7 @@ Next, you specify tag-based filters for your contract:
 <img
   class="screenshot"
   alt="Create contract dialog"
-  src="./img/contract-tags.jpg"
+  src="../img/contract-tags.jpg"
   width="550"
 />
 
@@ -253,7 +253,7 @@ When you're finished adding tag names, click **Generate Preview**. Studio attemp
 <img
   class="screenshot"
   alt="Result of contract preview generation"
-  src="./img/contract-generate-preview.jpg"
+  src="../img/contract-generate-preview.jpg"
   width="300"
 />
 
@@ -266,7 +266,7 @@ You can now review all of the details of your contract:
 <img
   class="screenshot"
   alt="Create contract dialog"
-  src="./img/contract-review.jpg"
+  src="../img/contract-review.jpg"
   width="550"
 />
 
@@ -325,7 +325,7 @@ After you create a contract, you can edit its lists of included and excluded tag
 <img
   class="screenshot"
   alt="Edit contract menu"
-  src="./img/contract-edit.jpg"
+  src="../img/contract-edit.jpg"
   width="550"
 />
 
@@ -338,7 +338,7 @@ The result of these checks is shown in the Review Schema step of the contract ed
 <img
   class="screenshot"
   alt="Contract edit dialog with checks result"
-  src="./img/contract-edit-check.jpg"
+  src="../img/contract-edit-check.jpg"
 />
 
 ## Contract checks
@@ -364,7 +364,7 @@ On your graph's Checks page in Studio, contract checks are shown as **Downstream
 <img
   class="screenshot"
   alt="Downstream checks shown in Studio UI"
-  src="./img/contract-check-ui.jpg"
+  src="../img/contract-check-ui.jpg"
 />
 
 You can click the **Downstream** item in the Tasks column to view a summary of all contract checks that ran, and you can click a particular check to view more details:
@@ -372,7 +372,7 @@ You can click the **Downstream** item in the Tasks column to view a summary of a
 <img
   class="screenshot"
   alt="Downstream checks shown in Studio UI"
-  src="./img/contract-downstream-workflows.jpg"
+  src="../img/contract-downstream-workflows.jpg"
 />
 
 ### Failing contract checks
@@ -389,7 +389,7 @@ To set blocking downstream variants:
     <img
       class="screenshot"
       alt="Blocking downstream variants for checks"
-      src="./img/contract-blocking-variants.jpg"
+      src="../img/contract-blocking-variants.jpg"
     />
 
 3. Select each contract variant that should be a blocking downstream variant.
