--- a/src/content/graphos/explorer/additional-features.mdx
+++ b/src/content/graphos/explorer/additional-features.mdx
@@ -92,7 +92,7 @@ There are two display modes for query plans. You can switch between **Show plan 
 
 ## Subscription support
 
-> Note that supergraphs do _not_ currently support subscription operations. You can only execute subscriptions in the Explorer with a [monograph](../org/graphs/#monographs).
+> Note that supergraphs do _not_ currently support subscription operations. You can only execute subscriptions in the Explorer with a [monograph](../graphs/overview/#monographs).
 
 The Explorer supports the following libraries/protocols for sending subscription operations over WebSocket:
 
@@ -128,7 +128,7 @@ You can click the `X` next to `Listening` to stop listening for updates (the upd
 
 ## Embedding
 
-If you've enabled [public access to a variant of your graph](../studio-graph-features/#public-variants), you can embed the Explorer in a webpage that you can then provide to your graph's consumers. This enables those consumers to test out operations from your own website.
+If you've enabled [public access to a variant of your graph](../graphs/studio-features/#public-variants), you can embed the Explorer in a webpage that you can then provide to your graph's consumers. This enables those consumers to test out operations from your own website.
 
 See [Embedding the Explorer](./embed-explorer).
 
