--- a/src/content/graphos/explorer/explorer.mdx
+++ b/src/content/graphos/explorer/explorer.mdx
@@ -11,7 +11,7 @@ The Explorer is free for all Apollo Studio organizations. It supports all GraphQ
 
 ## Setup
 
-To get started with the Explorer, [create a graph](../getting-started/#2-create-your-first-supergraph) in Apollo Studio and then navigate to that graph's Explorer page:
+To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create-your-first-supergraph) in Apollo Studio and then navigate to that graph's Explorer page:
 
 <img
   src="../img/explorer-new-graph.jpg"
