--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -4,7 +4,7 @@ title: Sending operation metrics to GraphOS
 
 import ObtainGraphApiKey from '../../shared/obtain-graph-api-key.mdx';
 
-> **If you have a [cloud supergraph](../org/graphs/#cloud-supergraphs), your router _automatically_ sends operation metrics to GraphOS!** This article is for _other_ types of graphs, such as enterprise supergraphs that run their own instance of the Apollo Router.
+> **If you have a [cloud supergraph](../graphs/overview/#cloud-supergraphs), your router _automatically_ sends operation metrics to GraphOS!** This article is for _other_ types of graphs, such as enterprise supergraphs that run their own instance of the Apollo Router.
 
 ## From the Apollo Router or Apollo Server
 
