--- a/src/content/graphos/metrics/usage-reporting.mdx
+++ b/src/content/graphos/metrics/usage-reporting.mdx
@@ -5,7 +5,7 @@ description: Understand your supergraph's performance
 
 import ObtainGraphApiKey from '../../shared/obtain-graph-api-key.mdx';
 
-If you have a [cloud supergraph](../org/graphs/#cloud-supergraphs), its router _automatically_ reports metrics for the operations that clients run on it.
+If you have a [cloud supergraph](../graphs/overview/#cloud-supergraphs), its router _automatically_ reports metrics for the operations that clients run on it.
 
 > For other types of graphs, see [Sending operation metrics to GraphOS](./sending-operation-metrics/).
 
