--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -14,7 +14,7 @@ Each organization member has one of the following roles:
 | -------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
 | **Org Admin**              | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                    |                              All                               |
 | **Graph Admin**            | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                            |                        Enterprise only                         |
-| **Contributor**            | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for back-end developers who are authorized to make changes to graphs. _Cannot_ push schema changes to [protected variants](../studio-graph-features#protected-variants-enterprise-only).                                                |                        Enterprise only                         |
+| **Contributor**            | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for back-end developers who are authorized to make changes to graphs. _Cannot_ push schema changes to [protected variants](../graphs/studio-features/#protected-variants-enterprise-only).                                                |                        Enterprise only                         |
 | **Documenter**             | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                  |                        Enterprise only                         |
 | **Observer**               | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for back-end developers who are _not_ authorized to make changes to graphs.                                                                                                     |                        Enterprise only                         |
 | **Consumer** (free)        | <p>Has view-only access to the organization's graph _schemas_, but not metrics. Can also execute queries in the Explorer. Intended for application developers building clients against a graph.</p><p>This role is available to all plan types, including Free. **Consumer** members do not count as billed users.</p> |                              All                               |
@@ -30,7 +30,7 @@ You can override a member's organization-wide role for individual graphs. For ex
 
 Members with the **Graph Admin** or **Org Admin** role can assign graph-specific roles from the Access tab of the graph's Settings page.
 
-If a graph is made [hidden](../studio-graph-features/#internal-graph-visibility-enterprise-only), then only users with explicit overrides (as well as **Org Admin**s) can see the graph.
+If a graph is made [hidden](../graphs/studio-features/#internal-graph-visibility-enterprise-only), then only users with explicit overrides (as well as **Org Admin**s) can see the graph.
 
 The **Graph Admin** and **Org Admin** roles have exactly the same permissions for a particular graph, so you can only grant a **Graph Admin** override, not an (equivalent) **Org Admin** override.
 
@@ -50,14 +50,14 @@ When **Contributor**s in an organization create a new graph, they are automatica
 | View and manage graph API keys                                     |     ✓     |      ✓      |                                                                             |                       |          |
 | Modify schema checks configuration                                 |     ✓     |      ✓      |                                                                             |                       |          |
 | Delete and rename graphs                                           |     ✓     |      ✓      |                                                                             |                       |          |
-| Create and modify [contracts](../contracts/) and contract variants |     ✓     |      ✓      |                                                                             |                       |          |
+| Create and modify [contracts](../delivery/contracts/) and contract variants |     ✓     |      ✓      |                                                                             |                       |          |
 | View existing contracts                                            |     ✓     |      ✓      |                                      ✓                                      |                       |          |
-| Create new variants                                                |     ✓     |      ✓      | Non-[protected](../studio-graph-features#protected-variants-enterprise-only) variants only |                       |          |
-| Push schemas to a graph                                            |     ✓     |      ✓      | Non-[protected](../studio-graph-features#protected-variants-enterprise-only) variants only |                       |          |
-| Manage Explorer settings (URL, etc)                                |     ✓     |      ✓      | Non-[protected](../studio-graph-features#protected-variants-enterprise-only) variants only |                       |          |
-| Create [Deployed Graphs](./graphs/)                                |     ✓     |      ✓      |                                      ✓                                      |                       |          |
+| Create new variants                                                |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
+| Push schemas to a graph                                            |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
+| Manage Explorer settings (URL, etc)                                |     ✓     |      ✓      | Non-[protected](../graphs/studio-features/#protected-variants-enterprise-only) variants only |                       |          |
+| Create [Deployed Graphs](../graphs/overview/)                                |     ✓     |      ✓      |                                      ✓                                      |                       |          |
 | Edit variant READMEs                                               |     ✓     |      ✓      |                                      ✓                                      |    Documenter only    |          |
-| Run [schema checks](../schema-checks)                              |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
+| Run [schema checks](../delivery/schema-checks)                              |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
 | See the schemas of subgraphs in federated graphs                   |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
 | View graph usage metrics and traces                                |     ✓     |      ✓      |                                      ✓                                      |           ✓           |          |
 | View graph schemas and changelogs                                  |     ✓     |      ✓      |                                      ✓                                      |           ✓           |    ✓     |
