--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -18,7 +18,7 @@ Apollo offers the following plans to new organizations:
 
 | Plan | Description |
 |------|-------------|
-| **Serverless (Free)** | Provides access to serverless [cloud supergraphs](./graphs/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly serverless operations. This plan is free. |
+| **Serverless (Free)** | Provides access to serverless [cloud supergraphs](../graphs/overview/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly serverless operations. This plan is free. |
 | **Serverless** | Removes the operation limit included in the **Serverless (Free)** plan, and is billed based on usage _above_ that limit. Also expands metrics data retention. |
 | **Enterprise** | These plans feature advanced security and schema delivery features, access control, audit logs, and more. They include negotiable usage rates. They do _not_ currently support cloud supergraphs. |
 
