--- a/src/content/graphos/platform-api.mdx
+++ b/src/content/graphos/platform-api.mdx
@@ -7,7 +7,7 @@ The **GraphOS Platform API** enables you to perform GraphOS actions from your ow
 
 - Fetching details about your organization's graphs
 - Publishing schemas to new or existing variants
-- Running [schema checks](./schema-checks/) and obtaining their results
+- Running [schema checks](./delivery/schema-checks/) and obtaining their results
 - Removing variants from a graph
 - Removing subgraphs from a supergraph
 - Managing API keys
