--- a/src/content/graphos/routing/cloud-configuration.mdx
+++ b/src/content/graphos/routing/cloud-configuration.mdx
@@ -3,7 +3,7 @@ title: Configuring cloud routing
 description: In Apollo Studio
 ---
 
-After you [create a cloud supergraph](../getting-started/), you can view and manage its router's configuration from Apollo Studio. Go to the **Settings** page for your variant in Studio, then click the **Cloud Routing** tab:
+After you [create a cloud supergraph](../quickstart/cloud/), you can view and manage its router's configuration from Apollo Studio. Go to the **Settings** page for your variant in Studio, then click the **Cloud Routing** tab:
 
 <img
   class="screenshot"
@@ -15,7 +15,7 @@ This page shows the following information:
 
 - The URL of your router's GraphQL endpoint
   - Every cloud router's URL is on a subdomain of `apollographos.net`.
-- Your router's current status and [launch history](../launches#launch-status)
+- Your router's current status and [launch history](../delivery/launches#launch-status)
 - Any [secrets](#managing-secrets) you've added
 - Your router's [YAML-based configuration](#router-configuration-yaml) 
 
