--- a/src/content/graphos/schema/cli-registration.mdx
+++ b/src/content/graphos/schema/cli-registration.mdx
@@ -122,6 +122,6 @@ jobs:
 
 ## Monolith schemas
 
-> ⚠️ These instructions apply only to [monographs](../org/graphs/#monographs), which are **not recommended**.
+> ⚠️ These instructions apply only to [monographs](../graphs/overview/#monographs), which are **not recommended**.
 
 <RegisterCli />
