--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -15,7 +15,7 @@ In [Apollo Studio](https://studio.apollographql.com), you can configure default 
 
 <img
   className="screenshot"
-  src="./img/check-configurations/check-configuration-page.png"
+  src="../img/check-configurations/check-configuration-page.png"
   alt="Check configuration page in Apollo Studio"
 />
 
@@ -28,7 +28,7 @@ In [Apollo Studio](https://studio.apollographql.com), you can configure default 
 
   <img
     class="screenshot"
-    src="./img/check-configurations/excluded-clients.png"
+    src="../img/check-configurations/excluded-clients.png"
     alt="Excluded clients configuration in Apollo Studio"
   />
 
@@ -86,7 +86,7 @@ To request other filtering or threshold mechanisms, please get in touch with us 
 
 ### Checking against multiple environments
 
-You might want to check schema changes against multiple environments, such as production, staging, and beta. Each of these environments might have a slightly different schema to support features that are experimental or in active development. In GraphOS, these schemas are represented as [variants](./org/graphs/#variants) of a single graph.
+You might want to check schema changes against multiple environments, such as production, staging, and beta. Each of these environments might have a slightly different schema to support features that are experimental or in active development. In GraphOS, these schemas are represented as [variants](../graphs/overview/#variants) of a single graph.
 
 You specify which variant you want to check against in the [graph ref](/rover/conventions/#graph-refs) you provide to `rover subgraph check`:
 
