--- a/src/content/graphos/delivery/launches.mdx
+++ b/src/content/graphos/delivery/launches.mdx
@@ -16,13 +16,13 @@ In some cases, a launch might consist entirely of changes that don't affect your
 
 Your supergraph's Launches page in Apollo Studio enables you to observe and monitor the schema delivery process for both in-progress and past launches:
 
-<img class="screenshot" src="./img/launches-page.jpg" width="500" />
+<img class="screenshot" src="../img/launches-page.jpg" width="500" />
 
 The green **PUBLISHED** badge indicates which launch corresponds to your graph's current published schema.
 
 Selecting a launch provides a breakdown of its individual steps and any errors or warnings that occurred during it:
 
-<img class="screenshot" src="./img/launch-details.jpg" width="500" />
+<img class="screenshot" src="../img/launch-details.jpg" width="500" />
 
 From this detail view, you can view the timestamp and other details for each step in the launch process, including any [schema checks](./schema-checks) that failed. You can also view the launch's associated supergraph schema (or any build errors if composition failed).
 
