--- a/src/content/graphos/delivery/validating-client-operations.mdx
+++ b/src/content/graphos/delivery/validating-client-operations.mdx
@@ -3,7 +3,7 @@ title: Validating client operations
 description: Confirm that all client operations are supported by your schema
 ---
 
-You can confirm that all of the GraphQL operations defined in your client application are valid against the types, fields, and arguments in your graph's [published schema](./schema/cli-registration). To do so, you use the `apollo client:check` command of the [Apollo CLI](/devtools/cli/):
+You can confirm that all of the GraphQL operations defined in your client application are valid against the types, fields, and arguments in your graph's [published schema](../schema/cli-registration). To do so, you use the `apollo client:check` command of the [Apollo CLI](/devtools/cli/):
 
 ```
 $ apollo client:check
@@ -32,7 +32,7 @@ By combining your registered graph's schema with your client-side schema extensi
 
 During development, your application might be executing GraphQL operations against a locally running server with a schema that differs somewhat from your _production_ server's schema. Because schemas can differ, it's important to always check your operations against the current schema for a particular environment _before_ you push client changes to that environment.
 
-If you represent each of your server's environments with a separate [graph variant](./org/graphs/#variants) (recommended), you can check your operations against a particular variant's schema like so:
+If you represent each of your server's environments with a separate [graph variant](../graphs/overview/#variants) (recommended), you can check your operations against a particular variant's schema like so:
 
 ```
 $ apollo client:check --variant=production
