--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -4,7 +4,7 @@ title: Connecting and authenticating with the Explorer
 
 The Explorer automatically attempts to connect to your GraphQL server at the URL specified in its Settings tab.
 
-> When you use the Explorer with a [cloud supergraph](../org/graphs/#cloud-supergraphs), the endpoint URL is always the URL of your current variant's GraphOS-managed router.
+> When you use the Explorer with a [cloud supergraph](../graphs/overview/#cloud-supergraphs), the endpoint URL is always the URL of your current variant's GraphOS-managed router.
 
 Depending on your GraphQL server's settings, you might need to configure the Explorer's connection to handle CORS requirements or authentication.
 
@@ -90,7 +90,7 @@ Each preflight script applies to a _single variant_ of a particular graph, so yo
 #### ⚠️ Important considerations for preflight scripts
 
 - All team members with access to a variant can _view_ that variant's preflight script.
-- For [protected variants](../studio-graph-features/#protected-variants-enterprise-only), only organization members with the [`Graph Admin` role](../org/members/#organization-wide-member-roles) can _create or edit_ a variant's preflight script.
+- For [protected variants](../graphs/studio-features/#protected-variants-enterprise-only), only organization members with the [`Graph Admin` role](../org/members/#organization-wide-member-roles) can _create or edit_ a variant's preflight script.
   - For _non_-protected variants, members with the `Contributor` role can also modify the preflight script.
 - Preflight scripts are stored in the Apollo cloud in plaintext.
   - **Do not include secret credentials in preflight scripts!** Instead, team members can provide their individual credentials in the Explorer via [environment variables](#environment-variables).
