--- a/src/content/graphos/org/organizations.mdx
+++ b/src/content/graphos/org/organizations.mdx
@@ -8,7 +8,7 @@ All data in Apollo Studio (graphs, schemas, metrics, etc.) is associated with a 
 
 ## Creating an organization
 
-You create your first organization as part of the [account creation process](../getting-started/), unless you've been invited to an existing organization by another Apollo user.
+You create your first organization as part of the [account creation process](../quickstart/cloud/), unless you've been invited to an existing organization by another Apollo user.
 
 You can create additional organizations by clicking **Create a new organization** at the bottom of your organization dropdown in [Studio](https://studio.apollographql.com):
 
@@ -19,7 +19,7 @@ You can create additional organizations by clicking **Create a new organization*
   width="300"
 />
 
-A single Studio organization can include any number of [graphs](./graphs/), so a single company rarely needs more than one or two organizations.
+A single Studio organization can include any number of [graphs](../graphs/overview/), so a single company rarely needs more than one or two organizations.
 
 ## Viewing your organizations
 
