--- a/src/content/graphos/quickstart/self-hosted.mdx
+++ b/src/content/graphos/quickstart/self-hosted.mdx
@@ -3,7 +3,7 @@ title: GraphOS quickstart for self-hosted supergraphs
 description: Host your supergraph's router in your own infrastructure
 ---
 
-> ⚠️ **Important:** If you're just getting started with GraphOS, we recommend instead [creating a cloud supergraph](../getting-started/).
+> ⚠️ **Important:** If you're just getting started with GraphOS, we recommend instead [creating a cloud supergraph](./cloud/).
 >
 > Self-hosted supergraphs are recommended only for organizations that need to host their router in their own infrastructure, usually to satisfy advanced performance or compliance requirements.
 >
@@ -36,7 +36,7 @@ A separate service called the **router** sits in front of your subgraphs and pro
 
 The router uses a special GraphQL schema called the **supergraph schema**. This schema incorporates the types and fields in each subgraph schema, along with metadata that enables the router to correctly distribute queries across subgraphs.
 
-A **_self-hosted_ supergraph** is a supergraph with a router that you host and manage in your _own infrastructure_. This is in contrast to a [**cloud supergraph**](./getting-started/), which uses a router that's hosted and managed by Apollo.
+A **_self-hosted_ supergraph** is a supergraph with a router that you host and manage in your _own infrastructure_. This is in contrast to a [**cloud supergraph**](./cloud/), which uses a router that's hosted and managed by Apollo.
 
 We'll cover these concepts in more detail as we proceed through the steps below. Let's jump in!
 
@@ -57,7 +57,7 @@ Complete the first step of <a href="./getting-started/#1-create-your-apollo-acco
 
 #### Create a graph in Apollo Studio
 
-After you create your Apollo account, create your first graph in Apollo Studio by following the instructions for your organization's [plan type](./org/plans/):
+After you create your Apollo account, create your first graph in Apollo Studio by following the instructions for your organization's [plan type](../org/plans/):
 
 > If you just created your organization as part of creating your account, it's on a **Serverless** plan type.
 
@@ -68,7 +68,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
     - **If you see this dialog...**
 
         <img
-          src="./img/studio-welcome.jpg"
+          src="../img/studio-welcome.jpg"
           class="screenshot"
           alt="Welcome message for new Studio orgs"
           width="350"
@@ -79,7 +79,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
     - **Otherwise,** find the following notice in the bottom-right corner of the page:
 
         <img
-          src="./img/classic-graph-flow.jpg"
+          src="../img/classic-graph-flow.jpg"
           class="screenshot"
           alt="Link to classic graph flow"
           width="300"
@@ -91,7 +91,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
 
     <img
       className="screenshot"
-      src="./img/graph-creation.jpg"
+      src="../img/graph-creation.jpg"
       width="350"
       style="margin-bottom: 20px;"
     />
@@ -103,7 +103,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
 4. Click **Next**. A dialog like the following appears:
 
     <img
-     src="./img/register-schema-dialog.jpg"
+     src="../img/register-schema-dialog.jpg"
      class="screenshot"
      alt="Schema registration options"
      width="500"
@@ -125,7 +125,7 @@ Your graph has been created, and your Studio organization now includes a **Class
 
     <img
       className="screenshot"
-      src="./img/graph-creation.jpg"
+      src="../img/graph-creation.jpg"
       width="350"
       style="margin-bottom: 20px;"
     />
@@ -137,7 +137,7 @@ Your graph has been created, and your Studio organization now includes a **Class
 5. Click **Next**. A dialog like the following appears:
 
     <img
-     src="./img/register-schema-dialog.jpg"
+     src="../img/register-schema-dialog.jpg"
      class="screenshot"
      alt="Schema registration options"
      width="500"
@@ -458,7 +458,7 @@ A **graph ref** uniquely identifies a particular variant of a registered graph i
 
 If you open your graph's README page in Apollo Studio, its graph ref is displayed as the top-level header of the page:
 
-<img class="screenshot" alt="Graph ref in Studio" src="./img/studio-graph-ref.jpg" width="300"/>
+<img class="screenshot" alt="Graph ref in Studio" src="../img/studio-graph-ref.jpg" width="300"/>
 
 </ExpansionPanel>
 
@@ -478,7 +478,7 @@ The gateway for the 'docs-example-graph' graph was updated with a new schema, co
 
 Nice! If you open your graph's details in Studio now, you'll see types and fields from our `locations` subgraph listed on the Schema page:
 
-<img class="screenshot" alt="Locations subgraph schema in Studio" src="./img/qs-studio-schema.jpg" width="300"/>
+<img class="screenshot" alt="Locations subgraph schema in Studio" src="../img/qs-studio-schema.jpg" width="300"/>
 
 Next, let's do the same thing for our `reviews` subgraph, **again substituting your graph ref where indicated**:
 
@@ -501,7 +501,7 @@ It's time to enable our router to fetch its supergraph schema from GraphOS. To d
 
 > ⚠️ **API keys are secret credentials.** Never share them outside your organization or commit them to version control. Delete and replace API keys that you believe are compromised.
 
-1. Obtain a graph API key for your Studio graph by <a href="./api-keys/#graph-api-keys" target="_blank">following these steps</a>. If you have an Enterprise plan, set the API key's role to **Contributor**.
+1. Obtain a graph API key for your Studio graph by <a href="../api-keys/#graph-api-keys" target="_blank">following these steps</a>. If you have an Enterprise plan, set the API key's role to **Contributor**.
 
     > Make sure to copy and paste the API key's value somewhere so you can reference it (for security, API keys are not visible in Studio after creation).
 
@@ -537,7 +537,7 @@ It's time to enable our router to fetch its supergraph schema from GraphOS. To d
 
     </ExpansionPanel>
 
-    > By providing an API key to the router, you also automatically enable **operation metrics reporting** to GraphOS, enabling you visualize your graph's performance. [Learn more about metrics.](./metrics/usage-reporting/)
+    > By providing an API key to the router, you also automatically enable **operation metrics reporting** to GraphOS, enabling you visualize your graph's performance. [Learn more about metrics.](../metrics/usage-reporting/)
 
 4. **Optionally,** to help you keep track of your router's environment variables, consider setting up a tool like [direnv](https://direnv.net/) so you don't need to set the variables every time you run `./router`.
 
@@ -545,7 +545,7 @@ It's time to enable our router to fetch its supergraph schema from GraphOS. To d
 
 Now that our router is running, we can quickly open our browser to [localhost:4000](http://localhost:4000/) to explore our composed schema in Apollo Sandbox:
 
-<img src="./img/gateway_sandbox.jpg" class="screenshot" alt="Schema view in Apollo Sandbox" width="600" />
+<img src="../img/gateway_sandbox.jpg" class="screenshot" alt="Schema view in Apollo Sandbox" width="600" />
 
 While we're here, execute some test queries against the supergraph! We'll look at metrics for those test queries in the next step.
 
@@ -556,7 +556,7 @@ Because our router is connected to GraphOS, it automatically collects and report
 Go to your variant's Operations page in Studio, which looks like this:
 
 <img
-  src="./img/operations-quickstart.jpg"
+  src="../img/operations-quickstart.jpg"
   className="screenshot"
   alt="The Operations page in Studio after executing an operation"
 />
